syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Infrastructure.Services";

package MessageBroker;

service MessageBroker {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc SubscribeToTopic (TopicRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string topic = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message MessageResponse {
  bool success = 1;
  Message message = 2;
}

message Message {
  string topic = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message TopicRequest {
  string topic_name = 1;
}

message Topic {
  string name = 1;
}